--- a/listagem-clientes.html
+++ b/listagem-clientes.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP LIB - END -->
 
-    <link rel="stylesheet" href="css/estilo-padrao.css">
+    <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/navegacao.css">
     <link rel="stylesheet" href="css/listagem.css">
 </head>
