--- a/cadastro-pedido.html
+++ b/cadastro-pedido.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Clientes</title>
+    <title>Cadastro Pedido</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/form-cliente.css">
@@ -19,23 +19,29 @@
             <a href="lista-pedidos.html">PEDIDOS</a>
         </nav>
     </header>
-    <h1>CADASTRO DE CLIENTE</h1>
+    <h1>CADASTRO PEDIDO</h1>
     <div class="container-formulario">
         <form action="">
-            <label for="nome">
-                Nome
+            <label for="cliente">
+                Cliente
                 <br>
-                <input type="text" name="input-nome-cliente" placeholder="Nome completo" required>
+                <input type="text" name="input-nome-cliente" placeholder="Selecione o cliente" required>
             </label>
-            <label for="cpf">
-                CPF
+            <label for="carro">
+                Carro
                 <br>
-                <input type="number" name="input-cpf-cliente" placeholder="Informe o CPF" required>
+                <input type="text" name="input-carro" placeholder="Selecione o carro" required>
             </label>
-            <label for="telefone">
-                Telefone
+            <label for="data">
+                Data do Pedido
                 <br>
-                <input type="number" name="input-telefone-cliente" placeholder="Informe o Telefone" required>
+                <input type="number" name="input-data-pedido" placeholder="insira a data do pedido" required>
+            </label>
+
+            <label for="valor total">
+                Valor Total do Pedido
+                <br>
+                <input type="number" name="input-valor-total" placeholder="insira o valor total pedido" required>
             </label>
 
             <input type="button" value="CADASTRAR">
