--- a/lista-carros.html
+++ b/lista-carros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Clientes</title>
+    <title>CARROS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/navegacao.css">
@@ -14,17 +14,17 @@
         <nav>
             <a href="lista-clientes.html">CLIENTES</a>
             <a href="lista-carros.html">CARROS</a>
-            <a href="lista-pedidos.html">PEDIDOS</a>
+            <a href="lista-pedidos.html">PEDIDO</a>
         </nav>
     </header>
     <div class="painel">
         <div class="esquerda">
             <div>
-                <a href="/cadastro-cliente.html">NOVO CLIENTE</a>
+                <a href="/cadastro-carros.html">NOVO CARRO</a>
             </div>
         </div>
-        <div class="meio">
-            <h1>CLIENTES</h1>
+        <div class="esquerda">
+            <h1>CARROS</h1>
         </div>
         <div class="direita"></div>
     </div>
@@ -32,19 +32,21 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID CLIENTE</th>
-                    <th>NOME</th>
-                    <th>CPF</th>
-                    <th>TELEFONE</th>
+                    <th>ID PEDIDO</th>
+                    <th>MARCA</th>
+                    <th>MODELO</th>
+                    <th>ANO FABRICAÇÃO</th>
+                    <th>COR PRINCIPAL</th>
                     <th>AÇÕES</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>APARECIDA EVELYN ISABELLE DA ROCHA</td>
-                    <td>664.851.780-82</td>
-                    <td>(96) 98230-6325</td>
+                    <td>TOYOTA</td>
+                    <td>Hilux GR-Sport</td>
+                    <td>2024</td>
+                    <td>PRETO</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -52,9 +54,10 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>SEVERINO GERALDO FERNANDES</td>
-                    <td>353.240.796-50</td>
-                    <td>(91) 98158-9367</td>
+                    <td>MERCEDES BENZ</td>
+                    <td>CLA 200 PROGRESSIVE</td>
+                    <td>2022</td>
+                    <td>CINZA ESPACIAL</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -62,9 +65,10 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>JAQUELINE AMANDA ADRIANA MARTINS</td>
-                    <td>102.173.781-02</td>
-                    <td>(84) 99548-7514</td>
+                    <td>BMW</td>
+                    <td>X6 M COMPETITION</td>
+                    <td>2023</td>
+                    <td>AZUL CINTILANTE</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
