--- a/lista-pedidos.html
+++ b/lista-pedidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Clientes</title>
+    <title>Pedidos</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/navegacao.css">
@@ -20,11 +20,11 @@
     <div class="painel">
         <div class="esquerda">
             <div>
-                <a href="/cadastro-cliente.html">NOVO CLIENTE</a>
+                <a href="/cadastro-pedido.html">NOVO PEDIDO</a>
             </div>
         </div>
         <div class="meio">
-            <h1>CLIENTES</h1>
+            <h1>PEDIDOS</h1>
         </div>
         <div class="direita"></div>
     </div>
@@ -33,9 +33,10 @@
             <thead>
                 <tr>
                     <th>ID CLIENTE</th>
-                    <th>NOME</th>
-                    <th>CPF</th>
-                    <th>TELEFONE</th>
+                    <th>CLIENTE</th>
+                    <th>CARRO</th>
+                    <th>DATA DO PEDIDO</th>
+                    <th>VALOR TOTAL</th>
                     <th>AÇÕES</th>
                 </tr>
             </thead>
@@ -43,8 +44,9 @@
                 <tr>
                     <td>1</td>
                     <td>APARECIDA EVELYN ISABELLE DA ROCHA</td>
-                    <td>664.851.780-82</td>
-                    <td>(96) 98230-6325</td>
+                    <td>Hilux GR-Sport</td>
+                    <td>12/02/2024</td>
+                    <td>R$ 450.000,00</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -53,8 +55,9 @@
                 <tr>
                     <td>2</td>
                     <td>SEVERINO GERALDO FERNANDES</td>
-                    <td>353.240.796-50</td>
-                    <td>(91) 98158-9367</td>
+                    <td>CLA 200 PROGRESSIVE</td>
+                    <td>05/06/2024</td>
+                    <td>R$ 1.250.000,00</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -63,8 +66,9 @@
                 <tr>
                     <td>3</td>
                     <td>JAQUELINE AMANDA ADRIANA MARTINS</td>
-                    <td>102.173.781-02</td>
-                    <td>(84) 99548-7514</td>
+                    <td>X6 M COMPETITION</td>
+                    <td>27/11/2023</td>
+                    <td>R$ 872.163,57</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
